css/product.css
@import url(./products.css);

.product-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 0;
}

.product__info-title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.product-title {
    color: var(--dark-color);
    text-align: center;
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    margin-bottom: 0.5rem;
    max-width: unset;
}

.product__info-main {
    display: flex;
    flex-direction: column;
    margin-top: 0;
}

.product__main-top {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    margin-top: 3rem;
    width: 100%;
    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
    padding: 2rem;
    border-radius: 1rem;
    background-color: #f4f3f1;
}

.product__image-wrapper {
    /* width: 50%; */
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: .5rem;
}

.product__image-wrapper img {
    width: 100%;
    border-radius: .5rem;
}

.other__infos-wrapper {
    display: flex;
    /* width: 100%; */
    flex: 2;
    align-items: flex-end;
}

.product__first-infos {
    display: flex;
    width: 100%;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    gap: 2rem;
    margin-right: 2rem;
    height: 100%;
}

.product-name,
.product-score,
.product-category,
.product-price,
.product-warranty {
    height: 100%;
    display: flex;
    gap: 5px;
}

.product-name span {
    font-size: 1rem;
    color: var(--dark-color);
    font-weight: bold;
}

.product-score span {
    font-size: 1rem;
    color: var(--dark-color);
    font-weight: bold;
}

.product-category span {
    font-size: 1rem;
    color: var(--dark-color);
    font-weight: bold;
}

.product-warranty {
    font-size: 1rem;
    color: var(--dark-color);
    font-weight: bold;
}

.product-price {
    justify-content: start;
}

.add-to-cart-wrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
    border-radius: .5rem;
    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
    height: 100%;
    justify-content: space-between;
    padding: 2rem;
    gap: 3rem;
    margin-right: 2rem;
}

.product-count span {
    font-size: 1rem;
    color: var(--dark-color);
    font-weight: bold;
}

.add-to-cart {
    border: none;
    border-radius: .3rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 1rem 1.2rem;
    font-size: 1.5rem;
    font-family: var(--primary-font);
    background-color: var(--primary-color);
    color: #eeeeee;
}

.add-to-cart div {
    padding: .5rem;
    background-color: #eeeeee;
    border-radius: .15rem;
    padding-bottom: 0;
}

.product__main-bottom {
    margin-top: 6rem;
}

.title {
    font-size: 2rem;
}

.product-description {
    font-size: 1.2rem;
    letter-spacing: 1px;
    line-height: 2rem;
    margin-top: 2rem;
}

.product__comments {
    margin-top: 0;
    border-radius: 1rem;
    padding: 2rem;
    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
}

.title-wrapper {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
}

.comment-form {
    display: flex;
    flex-direction: column;
}

.title {
    font-weight: bold;
    font-size: 3rem;
}

.add-new-comment {
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
}

.add-comment-title {
    font-weight: bold;
}

.input-wrapper {
    display: flex;
    flex-direction: column;
    margin-top: 2rem;
    gap: 1rem;
}

label {
    font-size: 1rem;
}

.input-wrapper textarea {
    border: none;
    border-radius: .5rem;
    padding: 1rem;
    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
}

.input-wrapper textarea:focus {
    outline: 1px solid var(--primary-color);
}

.submit-comment {
    margin-top: 2rem;
    border: none;
    border-radius: .5rem;
    padding: .5rem 1.5rem;
    width: max-content;
    background-color: var(--primary-color);
    color: #eeeeee;
    font-family: var(--primary-font);
    font-size: 1.5rem;
    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
}

.comments-container {
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.comment-wrapper {
    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
    padding: 1rem;
    border-radius: .5rem;
    display: flex;
    flex-direction: column;
}

.user-name {
    padding: 0;
    font-size: 1rem;
    display: flex;
    gap: 5px;
    align-items: flex-end;
    line-height: 5px;
}

.user-name svg {
    color: var(--primary-color);
}

.user-comment {
    font-size: 1.2rem;
    margin-top: 1rem;
}

@media only screen and (max-width: 1360px) {
    .add-to-cart {
        font-size: 1rem;
    }
}

@media only screen and (max-width: 1162px) {
    .product-name span {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-score span {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-category span {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-warranty {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-name,
    .product-score,
    .product-category,
    .product-price {
        font-size: 1rem;
    }

    .add-to-cart-wrapper {
        padding: 1rem;
        margin-right: 1rem;
    }

    .product__first-infos {
        margin-right: 1rem;
    }
}

@media only screen and (max-width: 965px) {
    .product-info {
        margin: 3rem 2.5rem;
    }

    .product__comments {
        margin: 3rem 2.5rem;
    }

    .other__infos-wrapper {
        flex-direction: column;
        flex: 1;
        margin-right: 2rem;
    }

    .product__first-infos {
        /* margin-top: 2rem; */
        gap: 1rem;
        margin-right: 0;
    }

    .add-to-cart-wrapper {
        margin-top: 1rem;
        margin-right: 0;
        gap: 2rem;
    }

    .add-to-cart {
        font-size: 1rem;
        text-wrap: nowrap;
        gap: 5px;
        padding: .8rem;
    }

}

@media only screen and (max-width: 804px) {

    .product__main-top {
        align-items: flex-start;
    }

    .other__infos-wrapper {
        margin-right: 1rem;
    }

    .product-name span {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-score span {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-category span {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-warranty {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-name,
    .product-score,
    .product-category,
    .product-price {
        font-size: 1rem;
    }

    .product__comments {
        margin: 3rem 1.5rem;
    }
}

@media only screen and (max-width: 650px) {
    .product__main-top {
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin-top: 3rem;
    }

    .other__infos-wrapper {
        margin-top: 2rem;
        margin-right: 0;
    }

    .title-wrapper img {
        width: 60px;
    }

    .title-wrapper .title {
        font-size: 2rem;
    }

    .product__first-infos {
        margin-right: 0;
    }

    .add-to-cart-wrapper {
        margin-right: 0;
    }

    .add-to-cart {
        max-width: unset;
    }

    .product__main-bottom {
        margin-top: 3rem;
    }

    .product-description {
        font-size: 14px;
        width: 100%;
        line-height: 1.5rem;
    }

    .product__comments {
        padding: 1rem;
    }

    .add-comment-title {
        font-size: 1.2rem;
    }

    .user-name {
        font-size: 12px;
    }

    .user-comment {
        font-size: 14px;
    }
}

@media only screen and (max-width: 360px) {

    .product__main-top {
        flex-wrap: wrap;
        padding: 1rem;
    }

    .product-name span {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-score span {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-category span {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-warranty {
        font-size: 12px;
        color: var(--dark-color);
        font-weight: bold;
    }

    .product-name,
    .product-score,
    .product-category,
    .product-price {
        font-size: 1rem;
    }

    .add-to-cart-wrapper {
        margin-top: 2rem;
        margin-right: 0;
    }

    .title {
        font-size: 2rem;
    }

    .product__comments {
        margin: 4rem 1.5rem;
    }

    .title-wrapper img {
        display: none;
    }

}

